k8scluster/nginxpod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx-pod-with-label
  namespace: default
  labels:
    papa: dhondhu
spec: 
  containers: 
  - image: nginx
    name: nginx-container
    ports: 
    - containerPort: 80
