k8scluster/networkpolicy.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata: 
#  name: nginx-network-policy
#  namespace: default
# spec:
#   podSelector: 
#     matchLabels:
#       papa: dhondhu

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
 name: nginx-network-policy
 namespace: default
spec:
  ingress: 
  - from:
    - ipBlock:
        cidr: 10.244.0.40/16
    ports: 
    - port: 80
  podSelector: 
    matchLabels:
      papa: dhondhu
